Issue #24266: Cancel history search mode with Ctrl+C in Readline 7